Commit code. Update time: 2023-05-25

--- a/JavaProjectDemo/platforms/android/mylibrary/src/main/res/layout/activity_qiniu_fullscreen.xml
+++ b/JavaProjectDemo/platforms/android/mylibrary/src/main/res/layout/activity_qiniu_fullscreen.xml
@@ -57,7 +57,8 @@ android:layout_above="@id/fullscreen_webview"
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            android:text="Back" />
+            android:text="Back"
+            android:textSize="13sp"/>
 
         <Button
             android:id="@+id/dummy_button_forward"
@@ -65,7 +66,8 @@ android:layout_above="@id/fullscreen_webview"
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            android:text="Forward" />
+            android:text="Forward"
+            android:textSize="13sp"/>
 
         <Button
             android:id="@+id/dummy_button_reload"
@@ -73,7 +75,8 @@ android:layout_above="@id/fullscreen_webview"
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            android:text="Reload" />
+            android:text="Reload"
+            android:textSize="13sp"/>
 
         <Button
             android:id="@+id/dummy_button_Home"
@@ -81,7 +84,8 @@ android:layout_above="@id/fullscreen_webview"
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            android:text="Home" />
+            android:text="Home"
+            android:textSize="13sp"/>
 
     </LinearLayout>
 
